implemented Kuhn-Munkres based alignment of binding sites added local MMTF test resource